# UFoxEngine

./: CMakeLists.txt  main.cpp  main.ixx  ufox_utils.ixx
.github/workflows/: qodana_code_quality.yml
Engine/: CMakeLists.txt  ufox_engine_core.hpp  ufox_graphic.cpp  ufox_graphic.hpp  ufox_graphic_device.ixx  ufox_gui.cpp  ufox_gui.hpp  ufox_gui_renderer.cpp  ufox_gui_renderer.hpp  ufox_inputSystem.cpp  ufox_inputSystem.hpp  ufox_input_system.cpp  ufox_input_system.hpp  ufox_numerics.cpp  ufox_numerics.hpp  ufox_panel.cpp  ufox_panel.hpp  ufox_tools_shader_compiler.cpp  ufox_tools_shader_compiler.hpp  ufox_view_panel.cpp  ufox_view_panel.hpp
Shaders/: gui_shader.frag  gui_shader.vert  shader.frag  shader.vert
Windowing/: CMakeLists.txt  ufox_windowing.cpp  ufox_windowing.hpp  ufox_windowing.ixx
